@@ -375,7 +375,7 @@ output = cl_safe_eval(c_string_to_object(lisp_code), Cnil, OBJNULL);
 	     ;; We should give a warning that we cannot link this module in
 	     (when flags (push flags ld-flags))
 	     (push init-fn submodules))))))
-    (setq c-file (open c-name :direction :output :external-format :latin-1))
+    (setq c-file (open c-name :direction :output :external-format :default))
     (format c-file +lisp-program-header+ submodules)
     (cond (shared-data-file
 	   (data-init shared-data-file)
@@ -774,7 +774,7 @@ from the C language code.  NIL means \"do not create the file\"."
   (let* ((null-stream (make-broadcast-stream))
          (*compiler-output1* null-stream)
          (*compiler-output2* (if h-file
-				 (open h-file :direction :output :external-format :latin-1)
+				 (open h-file :direction :output :external-format :default)
 				 null-stream))
          (t3local-fun (symbol-function 'T3LOCAL-FUN))
 	 (compiler-conditions nil))
