@@ -512,11 +512,10 @@ struct ecl_file_ops {
 enum {
 	ECL_STREAM_BINARY = 0,
 	ECL_STREAM_FORMAT = 0x2F,
-#ifdef ECL_UNICODE
-	ECL_STREAM_DEFAULT_FORMAT = 2,
-#else
+#ifndef ECL_UNICODE
 	ECL_STREAM_DEFAULT_FORMAT = 1,
-#endif
+#else
+	ECL_STREAM_DEFAULT_FORMAT = 2,
 	ECL_STREAM_ISO_8859_1 = 1,
 	ECL_STREAM_LATIN_1 = 1,
 	ECL_STREAM_UTF_8 = 2,
@@ -528,6 +527,7 @@ enum {
 	ECL_STREAM_UCS_4BE = 8,
 	ECL_STREAM_USER_FORMAT = 9,
 	ECL_STREAM_US_ASCII = 10,
+#endif
 	ECL_STREAM_CR = 16,
 	ECL_STREAM_LF = 32,
 	ECL_STREAM_SIGNED_BYTES = 64,
